# narrator-ai-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_CN.md  SKILL.md  install.py  install.sh  marketplace.json  pyproject.toml
.claude/skills/: SKILL.md
.claude/skills/narrator-ai/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
src/narrator_ai/: __init__.py  cli.py  client.py  config.py
src/narrator_ai/commands/: bgm.py  config_cmd.py  dubbing.py  file.py  task.py
tests/: test_config.py  test_dubbing.py  test_output.py  test_smoke.py
