[project]
name = "narrator-ai-cli"
version = "1.0.0"
description = "CLI client for Narrator AI API - designed for AI Agents and developers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "httpx[socks]>=0.28.0",
    "httpx-sse>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
narrator-ai-cli = "narrator_ai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrator_ai"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
