[project]
name = "narrator-ai-cli"
version = "1.0.0"
description = "CLI client for Narrator AI API - designed for AI Agents and developers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "httpx[socks]>=0.28.0",
    "httpx-sse>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
narrator-ai-cli = "narrator_ai.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrator_ai"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["scripts", "install.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101", "S108", "S603", "S607", "B904", "E501", "UP036"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
